style(nextjs): update todo page
